[package]
name = "arbiter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
axum-prometheus = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
anyhow = "1"
async-trait = "0.1"
tokio-util = "0.7"
flume = "0.11"
candle-core = { version = "0.9.1", features = [] }
candle-nn = "0.9.1"
candle-transformers = "0.9.1"

tokenizers = "0.19"
hf-hub = { version = "0.3", features = ["tokio"] }
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.15"

[features]
default = []
cuda = ["candle-core/cuda"]
